Compilers/Py Compiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> MAIN init RBRACK
Rule 2     main -> VOID MAIN init RBRACK
Rule 3     main -> INT MAIN init RBRACK
Rule 4     init -> cond init
Rule 5     init -> declare init
Rule 6     init -> atrib init
Rule 7     init -> loop init
Rule 8     init -> return init
Rule 9     cond -> IF LPAREN bool_exp RPAREN LBRACK init RBRACK
Rule 10    cond -> IF LPAREN VAR RPAREN LBRACK init RBRACK
Rule 11    cond -> IF LPAREN NUMBER RPAREN LBRACK init RBRACK
Rule 12    cond -> IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
Rule 13    cond -> IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
Rule 14    cond -> IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
Rule 15    loop -> WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
Rule 16    loop -> WHILE LPAREN VAR RPAREN LBRACK init RBRACK
Rule 17    loop -> WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
Rule 18    statement -> aritm LESSEQUAL aritm
Rule 19    statement -> aritm GREATEREQUAL aritm
Rule 20    statement -> aritm LESSTHAN aritm
Rule 21    statement -> aritm GREATERTHAN aritm
Rule 22    statement -> aritm EQUALS aritm
Rule 23    statement -> aritm NOTEQUALS aritm
Rule 24    statement -> atrib
Rule 25    statement -> BOOLEAN
Rule 26    bool_exp -> bool_exp AND bool_exp
Rule 27    bool_exp -> bool_exp OR bool_exp
Rule 28    bool_exp -> LPAREN bool_exp RPAREN
Rule 29    bool_exp -> NOT LPAREN statement RPAREN
Rule 30    bool_exp -> statement
Rule 31    aritm -> VAR
Rule 32    aritm -> NUMBER
Rule 33    aritm -> LPAREN aritm RPAREN
Rule 34    aritm -> aritm PLUS aritm
Rule 35    aritm -> aritm MINUS aritm
Rule 36    aritm -> aritm TIMES aritm
Rule 37    aritm -> aritm DIVIDE aritm
Rule 38    atrib -> VAR ASSIGN aritm SEMICOLON
Rule 39    atrib -> VAR ASSIGN aritm RPAREN
Rule 40    atrib -> VAR ASSIGN bool_exp SEMICOLON
Rule 41    atrib -> VAR ASSIGN bool_exp RPAREN
Rule 42    declare -> INT VAR ASSIGN aritm SEMICOLON
Rule 43    declare -> BOOL VAR ASSIGN bool_exp SEMICOLON
Rule 44    declare -> INT VAR ASSIGN aritm COMMA declare_same_line
Rule 45    declare -> BOOL VAR ASSIGN bool_exp COMMA declare_same_line
Rule 46    declare -> INT VAR SEMICOLON
Rule 47    declare -> BOOL VAR SEMICOLON
Rule 48    declare -> INT VAR COMMA declare_same_line
Rule 49    declare -> BOOL VAR COMMA declare_same_line
Rule 50    declare_same_line -> VAR COMMA declare_same_line
Rule 51    declare_same_line -> VAR SEMICOLON
Rule 52    declare_same_line -> VAR ASSIGN aritm COMMA declare_same_line
Rule 53    declare_same_line -> VAR ASSIGN aritm SEMICOLON
Rule 54    declare_same_line -> VAR ASSIGN bool_exp COMMA declare_same_line
Rule 55    declare_same_line -> VAR ASSIGN bool_exp SEMICOLON
Rule 56    return -> RETURN aritm SEMICOLON
Rule 57    return -> RETURN BOOLEAN SEMICOLON
Rule 58    init -> empty
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 26
ASSIGN               : 38 39 40 41 42 43 44 45 52 53 54 55
BOOL                 : 43 45 47 49
BOOLEAN              : 25 57
COMMA                : 44 45 48 49 50 52 54
DIVIDE               : 37
ELSE                 : 12 13 14
EQUALS               : 22
GREATEREQUAL         : 19
GREATERTHAN          : 21
IF                   : 9 10 11 12 13 14
INT                  : 3 42 44 46 48
LBRACK               : 9 10 11 12 12 13 13 14 14 15 16 17
LESSEQUAL            : 18
LESSTHAN             : 20
LPAREN               : 9 10 11 12 13 14 15 16 17 28 29 33
MAIN                 : 1 2 3
MINUS                : 35
NOT                  : 29
NOTEQUALS            : 23
NUMBER               : 11 14 17 32
OR                   : 27
PLUS                 : 34
RBRACK               : 1 2 3 9 10 11 12 12 13 13 14 14 15 16 17
RETURN               : 56 57
RPAREN               : 9 10 11 12 13 14 15 16 17 28 29 33 39 41
SEMICOLON            : 38 40 42 43 46 47 51 53 55 56 57
TIMES                : 36
VAR                  : 10 13 16 31 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
VOID                 : 2
WHILE                : 15 16 17
error                : 

Nonterminals, with rules where they appear

aritm                : 18 18 19 19 20 20 21 21 22 22 23 23 33 34 34 35 35 36 36 37 37 38 39 42 44 52 53 56
atrib                : 6 24
bool_exp             : 9 12 15 26 26 27 27 28 40 41 43 45 54 55
cond                 : 4
declare              : 5
declare_same_line    : 44 45 48 49 50 52 54
empty                : 58
init                 : 1 2 3 4 5 6 7 8 9 10 11 12 12 13 13 14 14 15 16 17
loop                 : 7
main                 : 0
return               : 8
statement            : 29 30

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . MAIN init RBRACK
    (2) main -> . VOID MAIN init RBRACK
    (3) main -> . INT MAIN init RBRACK

    MAIN            shift and go to state 1
    VOID            shift and go to state 3
    INT             shift and go to state 2

    main                           shift and go to state 4

state 1

    (1) main -> MAIN . init RBRACK
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 9
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 2

    (3) main -> INT . MAIN init RBRACK

    MAIN            shift and go to state 18


state 3

    (2) main -> VOID . MAIN init RBRACK

    MAIN            shift and go to state 19


state 4

    (0) S' -> main .



state 5

    (6) init -> atrib . init
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 20
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 6

    (56) return -> RETURN . aritm SEMICOLON
    (57) return -> RETURN . BOOLEAN SEMICOLON
    (31) aritm -> . VAR
    (32) aritm -> . NUMBER
    (33) aritm -> . LPAREN aritm RPAREN
    (34) aritm -> . aritm PLUS aritm
    (35) aritm -> . aritm MINUS aritm
    (36) aritm -> . aritm TIMES aritm
    (37) aritm -> . aritm DIVIDE aritm

    BOOLEAN         shift and go to state 23
    VAR             shift and go to state 25
    NUMBER          shift and go to state 22
    LPAREN          shift and go to state 24

    aritm                          shift and go to state 21

state 7

    (15) loop -> WHILE . LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> WHILE . LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> WHILE . LPAREN NUMBER RPAREN LBRACK init RBRACK

    LPAREN          shift and go to state 26


state 8

    (4) init -> cond . init
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 27
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 9

    (1) main -> MAIN init . RBRACK

    RBRACK          shift and go to state 28


state 10

    (58) init -> empty .

    RBRACK          reduce using rule 58 (init -> empty .)


state 11

    (8) init -> return . init
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 29
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 12

    (38) atrib -> VAR . ASSIGN aritm SEMICOLON
    (39) atrib -> VAR . ASSIGN aritm RPAREN
    (40) atrib -> VAR . ASSIGN bool_exp SEMICOLON
    (41) atrib -> VAR . ASSIGN bool_exp RPAREN

    ASSIGN          shift and go to state 30


state 13

    (9) cond -> IF . LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> IF . LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> IF . LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> IF . LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> IF . LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> IF . LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK

    LPAREN          shift and go to state 31


state 14

    (42) declare -> INT . VAR ASSIGN aritm SEMICOLON
    (44) declare -> INT . VAR ASSIGN aritm COMMA declare_same_line
    (46) declare -> INT . VAR SEMICOLON
    (48) declare -> INT . VAR COMMA declare_same_line

    VAR             shift and go to state 32


state 15

    (43) declare -> BOOL . VAR ASSIGN bool_exp SEMICOLON
    (45) declare -> BOOL . VAR ASSIGN bool_exp COMMA declare_same_line
    (47) declare -> BOOL . VAR SEMICOLON
    (49) declare -> BOOL . VAR COMMA declare_same_line

    VAR             shift and go to state 33


state 16

    (5) init -> declare . init
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 34
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 17

    (7) init -> loop . init
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 35
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 18

    (3) main -> INT MAIN . init RBRACK
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 36
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 19

    (2) main -> VOID MAIN . init RBRACK
    (4) init -> . cond init
    (5) init -> . declare init
    (6) init -> . atrib init
    (7) init -> . loop init
    (8) init -> . return init
    (58) init -> . empty
    (9) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK
    (10) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK
    (11) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK
    (12) cond -> . IF LPAREN bool_exp RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (13) cond -> . IF LPAREN VAR RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (14) cond -> . IF LPAREN NUMBER RPAREN LBRACK init RBRACK ELSE LBRACK init RBRACK
    (42) declare -> . INT VAR ASSIGN aritm SEMICOLON
    (43) declare -> . BOOL VAR ASSIGN bool_exp SEMICOLON
    (44) declare -> . INT VAR ASSIGN aritm COMMA declare_same_line
    (45) declare -> . BOOL VAR ASSIGN bool_exp COMMA declare_same_line
    (46) declare -> . INT VAR SEMICOLON
    (47) declare -> . BOOL VAR SEMICOLON
    (48) declare -> . INT VAR COMMA declare_same_line
    (49) declare -> . BOOL VAR COMMA declare_same_line
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
    (15) loop -> . WHILE LPAREN bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> . WHILE LPAREN VAR RPAREN LBRACK init RBRACK
    (17) loop -> . WHILE LPAREN NUMBER RPAREN LBRACK init RBRACK
    (56) return -> . RETURN aritm SEMICOLON
    (57) return -> . RETURN BOOLEAN SEMICOLON
    (59) empty -> .

    IF              shift and go to state 13
    INT             shift and go to state 14
    BOOL            shift and go to state 15
    VAR             shift and go to state 12
    WHILE           shift and go to state 7
    RETURN          shift and go to state 6
    RBRACK          reduce using rule 59 (empty -> .)

    atrib                          shift and go to state 5
    return                         shift and go to state 11
    init                           shift and go to state 37
    cond                           shift and go to state 8
    empty                          shift and go to state 10
    declare                        shift and go to state 16
    loop                           shift and go to state 17

state 20

    (6) init -> atrib init .

    RBRACK          reduce using rule 6 (init -> atrib init .)


state 21

    (56) return -> RETURN aritm . SEMICOLON
    (34) aritm -> aritm . PLUS aritm
    (35) aritm -> aritm . MINUS aritm
    (36) aritm -> aritm . TIMES aritm
    (37) aritm -> aritm . DIVIDE aritm

    SEMICOLON       shift and go to state 38
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    TIMES           shift and go to state 39
    DIVIDE          shift and go to state 42


state 22

    (32) aritm -> NUMBER .

    PLUS            reduce using rule 32 (aritm -> NUMBER .)
    MINUS           reduce using rule 32 (aritm -> NUMBER .)
    TIMES           reduce using rule 32 (aritm -> NUMBER .)
    DIVIDE          reduce using rule 32 (aritm -> NUMBER .)
    RPAREN          reduce using rule 32 (aritm -> NUMBER .)
    AND             reduce using rule 32 (aritm -> NUMBER .)
    OR              reduce using rule 32 (aritm -> NUMBER .)
    SEMICOLON       reduce using rule 32 (aritm -> NUMBER .)
    COMMA           reduce using rule 32 (aritm -> NUMBER .)
    LESSEQUAL       reduce using rule 32 (aritm -> NUMBER .)
    GREATEREQUAL    reduce using rule 32 (aritm -> NUMBER .)
    LESSTHAN        reduce using rule 32 (aritm -> NUMBER .)
    GREATERTHAN     reduce using rule 32 (aritm -> NUMBER .)
    EQUALS          reduce using rule 32 (aritm -> NUMBER .)
    NOTEQUALS       reduce using rule 32 (aritm -> NUMBER .)


state 23

    (57) return -> RETURN BOOLEAN . SEMICOLON

    SEMICOLON       shift and go to state 43


state 24

    (33) aritm -> LPAREN . aritm RPAREN
    (31) aritm -> . VAR
    (32) aritm -> . NUMBER
    (33) aritm -> . LPAREN aritm RPAREN
    (34) aritm -> . aritm PLUS aritm
    (35) aritm -> . aritm MINUS aritm
    (36) aritm -> . aritm TIMES aritm
    (37) aritm -> . aritm DIVIDE aritm

    VAR             shift and go to state 25
    NUMBER          shift and go to state 22
    LPAREN          shift and go to state 24

    aritm                          shift and go to state 44

state 25

    (31) aritm -> VAR .

    PLUS            reduce using rule 31 (aritm -> VAR .)
    MINUS           reduce using rule 31 (aritm -> VAR .)
    TIMES           reduce using rule 31 (aritm -> VAR .)
    DIVIDE          reduce using rule 31 (aritm -> VAR .)
    RPAREN          reduce using rule 31 (aritm -> VAR .)
    AND             reduce using rule 31 (aritm -> VAR .)
    OR              reduce using rule 31 (aritm -> VAR .)
    SEMICOLON       reduce using rule 31 (aritm -> VAR .)
    COMMA           reduce using rule 31 (aritm -> VAR .)
    LESSEQUAL       reduce using rule 31 (aritm -> VAR .)
    GREATEREQUAL    reduce using rule 31 (aritm -> VAR .)
    LESSTHAN        reduce using rule 31 (aritm -> VAR .)
    GREATERTHAN     reduce using rule 31 (aritm -> VAR .)
    EQUALS          reduce using rule 31 (aritm -> VAR .)
    NOTEQUALS       reduce using rule 31 (aritm -> VAR .)


state 26

    (15) loop -> WHILE LPAREN . bool_exp RPAREN LBRACK init RBRACK
    (16) loop -> WHILE LPAREN . VAR RPAREN LBRACK init RBRACK
    (17) loop -> WHILE LPAREN . NUMBER RPAREN LBRACK init RBRACK
    (26) bool_exp -> . bool_exp AND bool_exp
    (27) bool_exp -> . bool_exp OR bool_exp
    (28) bool_exp -> . LPAREN bool_exp RPAREN
    (29) bool_exp -> . NOT LPAREN statement RPAREN
    (30) bool_exp -> . statement
    (18) statement -> . aritm LESSEQUAL aritm
    (19) statement -> . aritm GREATEREQUAL aritm
    (20) statement -> . aritm LESSTHAN aritm
    (21) statement -> . aritm GREATERTHAN aritm
    (22) statement -> . aritm EQUALS aritm
    (23) statement -> . aritm NOTEQUALS aritm
    (24) statement -> . atrib
    (25) statement -> . BOOLEAN
    (31) aritm -> . VAR
    (32) aritm -> . NUMBER
    (33) aritm -> . LPAREN aritm RPAREN
    (34) aritm -> . aritm PLUS aritm
    (35) aritm -> . aritm MINUS aritm
    (36) aritm -> . aritm TIMES aritm
    (37) aritm -> . aritm DIVIDE aritm
    (38) atrib -> . VAR ASSIGN aritm SEMICOLON
    (39) atrib -> . VAR ASSIGN aritm RPAREN
    (40) atrib -> . VAR ASSIGN bool_exp SEMICOLON
    (41) atrib -> . VAR ASSIGN bool_exp RPAREN
